Initial development of Header, Mode, and Search components

--- a/src/index.css
+++ b/src/index.css
@@ -27,9 +27,7 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
+  margin: 20px 30px;
   min-width: 320px;
   min-height: 100vh;
 }
