--- a/src/index.css
+++ b/src/index.css
@@ -33,8 +33,13 @@ body {
 }
 
 h1 {
+  font-family: 'Montserrat', sans-serif;
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+h2, h3, h4, h5, h6, p {
+  font-family: 'Montserrat', sans-serif;
 }
 
 button {
